--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -52,8 +52,8 @@ For more information about hardware requirements for deploying {productname} Pro
 
 == Synchronize the Parent and Proxy Extension Child Channels
 
-This section presumes that you have already entered your organization credentials under the menu:Admin[Setup Wizard -> Organization Credentials] in the server's {webui}.
-Products are listed on the menu:Admin[Setup Wizard -> Products] page.
+This section presumes that you have already entered your organization credentials under the menu:Admin[Setup Wizard > Organization Credentials] in the server's {webui}.
+Products are listed on the menu:Admin[Setup Wizard > Products] page.
 This channel must be fully synchronized on the server, with the child channel [systemitem]``Proxy`` as an extension option selected.
 
 
