--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -59,7 +59,7 @@ This channel must be fully synchronized on the server, with the child channel [s
 
 .Procedure: Synchronizing the Proxy Parent Channel and Proxy Extension
 . In the {productname} {webui} select menu:Admin[Products].
-. From the products page enter {sle-micro} in the filter field.
+. From the products page enter {sle-micro} or {sles} in the filter field.
 . Next use the drop-down to select the required architecture.
   For this example {x86_64}.
 . In the [systemitem]``Product Description`` field select the {sle-micro} {microversion} or {sles} {bci-suma} checkbox then use the drop-down to select the [systemitem]``SUSE Manager Proxy Extension 5.0 x86_64`` extension.
