--- a/modules/administration/pages/users.adoc
+++ b/modules/administration/pages/users.adoc
@@ -27,10 +27,8 @@ To add new users to your organization, click btn:[Create User], complete the det
 
 To ensure that all new user passwords adhere to the organization's security standards, {productname} administrator has the option to enforce the password creation rules.
 
-The exact password requirements are defined in menu:Admin[Manager Configuration > Password Policy]. 
-
-Click on this link to see the page entitled [literal]``Server Configuration - Password Policy``.
-This is where the password requirements can be defined using a combination of fields:
+In the {webui}, navigate to menu:Admin[Manager Configuration > Password Policy] to define the password requirements.
+Use a combination of the following fields:
 
 Min Password Length::
 Use this field to define the minimal length of password.
