--- a/modules/administration/pages/auditing.adoc
+++ b/modules/administration/pages/auditing.adoc
@@ -51,7 +51,7 @@ Use the ``audit.listSystemsByPatchStatus`` API method.
 For more information about this method, see the {productname} API Guide.
 
 == OVAL
-The CVE Audit operation relies on two primary data sources: Channels and OVAL.
+The CVE Audit operation relies on two primary data sources: Channels and OVAL (Open Vulnerability and Assessment Language).
 These two sources provide us with metadata for conducting CVE audits, each serving a distinct purpose.
 
 Channels::
