--- a/modules/administration/pages/users.adoc
+++ b/modules/administration/pages/users.adoc
@@ -49,7 +49,7 @@ Restrict Consecutive Characters::
 Use this field to specify whether the restricted consecutive characters.
 
 Require Special Characters::
-Use this field to specify whether the passoerd must include special characters.
+Use this field to specify whether the password must include special characters.
 
 Allowed Special Characters::
 This field is enable only of the [literal]``Require Special Characters`` is selected.
