make sure mgradm mgradm-bash-completion gets installed

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -296,14 +296,12 @@ zypper up
 
 // FIXME: where is the following "Reboot" actually required?
 
-. Reboot
-. Log in as root and install podman
-
-+
+. Reboot.
+. Log in as root and install [package]``podman`` plus [package]``mgradm`` and [package]``mgradm-bash-completion`` (if not already automatically installed):
 
 [source,shell]
 ----
-zypper install podman
+zypper install podman mgradm mgradm-bash-completion
 ----
 
 // FIXME: Should come later, after configuring storage and then run with FQDN
