reboot is safe net

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -69,13 +69,11 @@ This channel must be fully synchronized on the server, with the child channel [s
 
 
 [[deploy-suma-proxy-host]]
-==  Deploy {productname} Proxy
+==  Prepare {productname} Proxy Host
 
-// FIXME
-// Maybe, here we'd better use a section title such as:
-// _Prepare Host OS for {productname} Deployment_
 
-=== Deploy on {sle-micro} {microversion}
+
+=== Install {sle-micro} {microversion} and Deploy Proxy
 
 .Procedure: Downloading the Installation Media
 . Locate the {sle-micro} {microversion} installation media at https://www.suse.com/download/sle-micro/.
@@ -165,7 +163,7 @@ To continue with deployment, see xref:installation-and-upgrade:container-deploym
 
 
 [[deploy-suma-proxy-sles]]
-=== Deploy on {sles} {bci-suma}
+=== Install {sles} {bci-suma} and Deploy Proxy
 
 Alternatively, you can install {productname} Proxy on {sles} {bci-suma}.
 The following procedure describes the main steps of the installation process.
@@ -208,11 +206,9 @@ download updates during install):
 zypper up
 ----
 
-+
+. Reboot.
 
-// FIXME: is "Reboot" required here?  Cf. server counterpart
-
-. As root install podman and additional tools:
+. Log in as root and install [package]``podman`` and additional tools:
 
 +
 [source,shell]
