--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -97,7 +97,6 @@ For detailed documentation on preparing your machines OS (virtual or physical), 
 . Enter your {scclongform} Email address.
 . Enter your registration code for {sle-micro} {microversion}.
 . Click [systemitem]``Next`` to continue.
-. On the [systemitem]``Extension and Module Selection`` page uncheck the **Hide Development Versions** checkbox.
 . Select the {productname} {productnumber} Proxy extension [systemitem]``Checkbox``.
 . Click [systemitem]``Next`` to continue.
 . Enter your {productname} {productnumber} Proxy extension registration code.
@@ -127,13 +126,13 @@ transactional-update
 
 . Reboot the system.
 . Log in as root.
-. Install the container utilities:
+. Install the container utilities ([package]``mgrpxy`` should already be installed automatically):
 
 +
 
 [source, shell]
 ----
-transactional-update pkg install mgrpxy mgrpxy-bash-completion
+transactional-update pkg install mgrpxy-bash-completion
 ----
 
 +
@@ -208,7 +207,7 @@ zypper up
 
 . Reboot.
 
-. Log in as root and install [package]``podman`` and additional tools:
+. Log in as root and install [package]``podman`` plus [package]``mgrpxy`` and [package]``mgrpxy-bash-completion`` (if not already automatically installed):
 
 +
 [source,shell]
