Major Overhaul: Asciidoctor-PDF Theming, Backend Tooling, and Book Overview Pages  (#3760)
* first push for pdf

* update pdf styles and added new ruby template

* update book introductions to support new pdf styles

* update

* update

* removed doc date from subsections

* update

* update

* update

* updated pdf themes for english

* update

* update

* update

* update

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -2,7 +2,12 @@
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Administration Guide
 include::./branding/pdf/entities.adoc[]
+:doctype: book
+:title-page:
+:preface-title: Preface
+:toc-title: Contents
 :toclevels: 3
+:source-highlighter: rouge
 endif::[]
 
 
