--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -2,8 +2,12 @@
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Installation and Upgrade Guide
 include::./branding/pdf/entities.adoc[]
-:toclevels: 3
 :doctype: book
+:title-page:
+:preface-title: Preface
+:toc-title: Contents
+:toclevels: 3
+:source-highlighter: rouge
 endif::[]
 
 * xref:installation-and-upgrade-overview.adoc[Installation and Upgrade Guide]
