--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -12,13 +12,10 @@ ifeval::[{suma-content} == true]
 [IMPORTANT]
 ====
 We are currently in the process of enhancing the [.currentrel]**{productnumber}** documentation. 
-As we transition from a traditional framework to a modern, containerized approach, please be aware of the following:
 
-**Developmental Stage:** This documentation is actively being updated. You will encounter areas that are still under construction or evolving.
-
-**Information Gaps:** During this transition, there may be gaps in the information provided. We are working diligently to update and complete all sections as quickly and efficiently as possible.
-
-**We Value Your Input:** Your feedback is crucial to us! If you find any aspects of the documentation unclear or notice missing information, please do not hesitate to reach out. We appreciate your questions and suggestions, which are vital in helping us improve.
+**We Value Your Input:** Your feedback is crucial to us! 
+If you find any aspects of the documentation unclear or notice missing information, please do not hesitate to reach out. 
+We appreciate your questions and suggestions, which are vital in helping us improve.
 
 
 Submit feedback: https://github.com/uyuni-project/uyuni-docs/issues
@@ -29,13 +26,10 @@ ifeval::[{uyuni-content} == true]
 [IMPORTANT]
 ====
 We are currently in the process of enhancing the [.currentrel]**{releaseversion}** documentation. 
-As we transition from a traditional framework to a modern, containerized approach, please be aware of the following:
 
-**Developmental Stage:** This documentation is actively being updated. You will encounter areas that are still under construction or evolving.
-
-**Information Gaps:** During this transition, there may be gaps in the information provided. We are working diligently to update and complete all sections as quickly and efficiently as possible.
-
-**We Value Your Input:** Your feedback is crucial to us! If you find any aspects of the documentation unclear or notice missing information, please do not hesitate to reach out. We appreciate your questions and suggestions, which are vital in helping us improve.
+**We Value Your Input:** Your feedback is crucial to us! 
+If you find any aspects of the documentation unclear or notice missing information, please do not hesitate to reach out. 
+We appreciate your questions and suggestions, which are vital in helping us improve.
 
 
 Submit feedback: https://github.com/uyuni-project/uyuni-docs/issues
@@ -84,7 +78,7 @@ The following documentation is available for {productname} version {productnumbe
 
 Download all PDFs icon:caret-right[] icon:file-archive[link="../susemanager-docs_en-pdf.zip"]
 
-[IMPORTANT]
+[TIP]
 ====
 {productname} documentation is available in several locations and formats.
 For the most up-to-date version of this documentation, see https://documentation.suse.com/suma/.
