--- a/modules/client-configuration/pages/client-config-overview.adoc
+++ b/modules/client-configuration/pages/client-config-overview.adoc
@@ -1,12 +1,92 @@
+ifndef::backend-pdf[]
 [[client-cfg-overview]]
-= Client Configuration Guide Overview
+= Client Configuration Guide
 
-**Updated:** {docdate}
+// HTML Publication date 
+**Publication Date:** {docdate}
 
-Registering clients is the first step after installing {productname}, and most of the time you spend with {productname} is spent on maintaining those clients.
+== Preface
 
-{productname} is compatible with {sle} or another Linux operating system and with a range of hardware options.
+After installing {productname}, the first step is registering clients. Managing these clients will be a key part of your workflow.
 
-For a complete list of supported clients and features, see xref:client-configuration:supported-features.adoc[].
+{productname} supports {sle} and other Linux distributions, offering compatibility across various hardware options.
 
-This guide discusses how to register and configure different clients, both manually and automatically.
+For a complete list of supported clients and features, refer to xref:client-configuration:supported-features.adoc[Supported Clients and Features].
+
+This guide covers both manual and automated client registration and configuration.
+
+== Copyright Notice
+
+// HTML Copyright
+Copyright © {copyrightdate} SUSE LLC and contributors. All rights reserved.
+Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.2 or (at your option) version 1.3; with the Invariant Section being this copyright
+notice and license. A copy of the license version 1.2 is included in the section entitled xref:legal:license.adoc[GNU Free Documentation License].
+
+== Trademarks
+// HTML Trademarks
+For SUSE trademarks, see https://www.suse.com/company/legal/ . All third-party trademarks are the property
+of their respective owners. Trademark symbols (®, ™ etc.) denote trademarks of SUSE and its affiliates. Asterisks
+(*) denote third-party trademarks.
+All information found in this book has been compiled with utmost attention to detail. However, this does not
+guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor the translators shall be held liable
+for possible errors or the consequences thereof.
+endif::[]
+
+ifdef::backend-pdf[]
+
+<<<
+
+[preface]
+== Preface
+
+Client Configuration Guide +
+{productname} {productnumber}
+
+After installing {productname}, the first step is registering clients. Managing these clients will be a key part of your workflow.
+
+{productname} supports {sle} and other Linux distributions, offering compatibility across various hardware options.
+
+For a complete list of supported clients and features, refer to xref:client-configuration:supported-features.adoc[Supported Clients and Features].
+
+This guide covers both manual and automated client registration and configuration.
+
+// PDF Publication
+
+**Publication Date:** {docdate}
+
+// PDF Copyright Space
+
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+
+
+// PDF Copyright
+Copyright © {copyrightdate} SUSE LLC and contributors. All rights reserved.
+Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.2 or (at your option) version 1.3; with the Invariant Section being this copyright
+notice and license. A copy of the license version 1.2 is included in the section entitled xref:legal:license.adoc[GNU Free Documentation License].
+
+// PDF Trademarks
+For SUSE trademarks, see https://www.suse.com/company/legal/ . All third-party trademarks are the property
+of their respective owners. Trademark symbols (®, ™ etc.) denote trademarks of SUSE and its affiliates. Asterisks
+(*) denote third-party trademarks.
+All information found in this book has been compiled with utmost attention to detail. However, this does not
+guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor the translators shall be held liable
+for possible errors or the consequences thereof.
+
+<<<
+
+toc::[]
+
+endif::[]
