--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -2,8 +2,12 @@
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Common Workflows
 include::./branding/pdf/entities.adoc[]
-:toclevels: 3
 :doctype: book
+:title-page:
+:preface-title: Preface
+:toc-title: Contents
+:toclevels: 2
+:source-highlighter: rouge
 endif::[]
 
 * xref:common-workflows-overview.adoc[Common Workflows]
