Major Overhaul: Asciidoctor-PDF Theming, Backend Tooling, and Book Overview Pages  (#3760)
* first push for pdf

* update pdf styles and added new ruby template

* update book introductions to support new pdf styles

* update

* update

* removed doc date from subsections

* update

* update

* update

* updated pdf themes for english

* update

* update

* update

* update

--- a/modules/specialized-guides/pages/specialized-guides-overview.adoc
+++ b/modules/specialized-guides/pages/specialized-guides-overview.adoc
@@ -1,13 +1,17 @@
+ifndef::backend-pdf[]
 [[specialized-guides-overview]]
-= Specialized Guides Overview
+= Specialized Guides
 
-**Updated:** {docdate}
+// HTML Publication date 
+**Publication Date:** {docdate}
 
-This book contains a list of special topics and functionalities of {productname}.
+== Preface
 
-It is designed to introduce basic, routine or some advanced tasks, by explaining what you are achieving in each step, and the various options available to you along the way.
+This guide provides an overview of specialized topics and functionalities within {productname}.
 
-You can read specialized guides for:
+It is designed to help users with basic, routine, and advanced tasks, explaining each step's purpose and outlining the various options available to customize your approach.
+
+For more in-depth information, refer to the following specialized guides:
 
 ifeval::[{mlm-content} == true]
 * xref:specialized-guides:public-cloud-guide/overview.adoc[Public Cloud Guide]
@@ -16,3 +20,81 @@ endif::[]
 * xref:specialized-guides:salt/salt-overview.adoc[Salt Guide]
 * xref:specialized-guides:large-deployments/overview.adoc[Large Deployments Guide]
 * xref:specialized-guides:qs-sap/overview.adoc[Quick Start: SAP]
+
+== Copyright Notice
+
+// HTML Copyright
+Copyright © {copyrightdate} SUSE LLC and contributors. All rights reserved.
+Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.2 or (at your option) version 1.3; with the Invariant Section being this copyright
+notice and license. A copy of the license version 1.2 is included in the section entitled xref:legal:license.adoc[GNU Free Documentation License].
+
+== Trademarks
+// HTML Trademarks
+For SUSE trademarks, see https://www.suse.com/company/legal/ . All third-party trademarks are the property
+of their respective owners. Trademark symbols (®, ™ etc.) denote trademarks of SUSE and its affiliates. Asterisks
+(*) denote third-party trademarks.
+All information found in this book has been compiled with utmost attention to detail. However, this does not
+guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor the translators shall be held liable
+for possible errors or the consequences thereof.
+endif::[]
+
+// PDF PREFACE PAGE
+ifdef::backend-pdf[]
+
+<<<
+
+[preface]
+== Preface
+
+Specialized Guides +
+{productname} {productnumber}
+
+This guide provides an overview of specialized topics and functionalities within {productname}.
+
+It is designed to help users with basic, routine, and advanced tasks, explaining each step's purpose and outlining the various options available to customize your approach.
+
+For more in-depth information, refer to the following specialized guides:
+
+ifeval::[{mlm-content} == true]
+* xref:specialized-guides:public-cloud-guide/overview.adoc[Public Cloud Guide]
+endif::[]
+
+* xref:specialized-guides:salt/salt-overview.adoc[Salt Guide]
+* xref:specialized-guides:large-deployments/overview.adoc[Large Deployments Guide]
+* xref:specialized-guides:qs-sap/overview.adoc[Quick Start: SAP]
+
+
+// PDF Publication
+**Publication Date:** {docdate}
+
+// PDF Copyright Space
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+{nbsp} +
+
+// PDF Copyright
+Copyright © 2006–2025 SUSE LLC and contributors. All rights reserved.
+Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.2 or (at your option) version 1.3; with the Invariant Section being this copyright
+notice and license. A copy of the license version 1.2 is included in the section entitled xref:legal:license.adoc[GNU Free Documentation License].
+
+// PDF Trademarks
+For SUSE trademarks, see https://www.suse.com/company/legal/ . All third-party trademarks are the property
+of their respective owners. Trademark symbols (®, ™ etc.) denote trademarks of SUSE and its affiliates. Asterisks
+(*) denote third-party trademarks.
+All information found in this book has been compiled with utmost attention to detail. However, this does not
+guarantee complete accuracy. Neither SUSE LLC, its affiliates, the authors nor the translators shall be held liable
+for possible errors or the consequences thereof.
+
+<<<
+
+toc::[]
+
+endif::[]
