--- a/modules/client-configuration/pages/activation-keys.adoc
+++ b/modules/client-configuration/pages/activation-keys.adoc
@@ -38,12 +38,14 @@ image::provision-config-keys.png[scaledwidth=80%]
 
 [IMPORTANT]
 ====
+
 * Do not use commas or double quotes in the [guimenu]``Key`` field for any {suse} products.
 However, you *must* use commas for Red Hat Products.
 
-* All other characters are allowed, but `<> (){}` (this includes the space) are removed automatically.
+* All other characters are allowed, but ``<> (){}`` (this includes the space) are removed automatically.
 
 * If the field is left empty, a random string is generated.
+
 ====
 
 +
