Backport 5.0.4:  Restructure Server Install scenario micro/sles #3830 (#3833)
* Backport 5.0.4:  Restructure Server Install scenario micro/sles #3830
* https://bugzilla.suse.com/show_bug.cgi?id=1239801
* https://github.com/SUSE/spacewalk/issues/26739
* move note about SLEM update behavior to SLE Micro section
* add links where to continue after host OS install (micro/sles)
* make sure mgradm mgradm-bash-completion gets installed

--- a/modules/common-workflows/pages/workflow-install-from-selfinstall-on-ppc.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-selfinstall-on-ppc.adoc
@@ -71,7 +71,7 @@ mgr-storage-server $device
 +
 Ensure [literal]``$device`` points to the fast, persistent storage.
 +
-For more information, see xref:installation-and-upgrade:container-deployment/mlm/server-deployment-mlm.adoc#_persistent_volumes[Persistent Volumes].
-+
-.. Follow the documentation from here to continue with deployment
-xref:installation-and-upgrade:container-deployment/mlm/server-deployment-mlm.adoc#_deploy_with_mgradm[Server Deployment].
+For more information, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#deploy-suma-server-persistent-storage[Persistent Volumes].
+
+To continue with deployment, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#deploy-suma-server-mgradm[Server Deployment].
+
