--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -5,7 +5,7 @@ ifeval::[{uyuni-content} == true]
 endif::[]
 
 
-This guide outlines the deployment process for the {productname} {productnumber} Proxy.
+This guide outlines the deployment process for the {productname} {productnumber} Proxy container on {sle-micro} {microversion} or {sles} {bci-suma}.
 This guide presumes you have already successfully deployed a {productname} {productnumber} Server.
 
 [IMPORTANT]
@@ -17,13 +17,12 @@ We are working on managing it as Salt SSH client ([systemitem]``salt-ssh`` conta
 
 To successfully deploy, you will perform the following actions:
 
-
 // Add certificate tasks item
 .Procedure: Deploying Proxy
 . Review hardware requirements.
-. Synchronize the {sle-micro} {microversion} parent channel and the proxy extension child channel on the server.
-. Install {sle-micro} {microversion} on a bare-metal machine.
-. During the installation, register {sle-micro} {microversion} along with the {productname} Proxy extension.
+. Synchronize the {sle-micro} {microversion} or {sles} {bci-suma} parent channel and the proxy extension child channel on the server.
+. Install {sle-micro} or {sles} on a bare-metal machine.
+. During the installation, register {sle-micro} or {sles} along with the {productname} Proxy extension.
 . Create a {salt} activation key.
 . Bootstrap the proxy as a client with the [systemitem]``default`` connection method.
 . Generate a proxy configuration.
@@ -53,23 +52,28 @@ For more information about hardware requirements for deploying {productname} Pro
 
 == Synchronize the Parent and Proxy Extension Child Channels
 
-This section presumes that you have already entered your organization credentials under the menu:Admin[Setup Wizard -> Organization Credentials] in the server's {webui}.
-Products are listed on the menu:Admin[Setup Wizard -> Products] page.
+This section presumes that you have already entered your organization credentials under the menu:Admin[Setup Wizard > Organization Credentials] in the server's {webui}.
+Products are listed on the menu:Admin[Setup Wizard > Products] page.
 This channel must be fully synchronized on the server, with the child channel [systemitem]``Proxy`` as an extension option selected.
 
 
 .Procedure: Synchronizing the Proxy Parent Channel and Proxy Extension
 . In the {productname} {webui} select menu:Admin[Products].
-. From the products page enter {sle-micro} in the filter field.
+. From the products page enter {sle-micro} or {sles} in the filter field.
 . Next use the drop-down to select the required architecture.
   For this example {x86_64}.
-. In the [systemitem]``Product Description`` field select the {sle-micro} {microversion} checkbox then use the drop-down to select the [systemitem]``SUSE Manager Proxy Extension 5.0 x86_64`` extension.
+. In the [systemitem]``Product Description`` field select the {sle-micro} {microversion} or {sles} {bci-suma} checkbox then use the drop-down to select the [systemitem]``SUSE Manager Proxy Extension 5.0 x86_64`` extension.
 . Click the btn:[Add products] button.
 . Wait for the synchronization to complete.
 
 
 
-== Deploy {productname} Proxy on {sle-micro} {microversion}
+[[deploy-suma-proxy-host]]
+==  Prepare {productname} Proxy Host
+
+
+
+=== Install {sle-micro} {microversion} and Deploy Proxy
 
 .Procedure: Downloading the Installation Media
 . Locate the {sle-micro} {microversion} installation media at https://www.suse.com/download/sle-micro/.
@@ -93,7 +97,6 @@ For detailed documentation on preparing your machines OS (virtual or physical), 
 . Enter your {scclongform} Email address.
 . Enter your registration code for {sle-micro} {microversion}.
 . Click [systemitem]``Next`` to continue.
-. On the [systemitem]``Extension and Module Selection`` page uncheck the **Hide Development Versions** checkbox.
 . Select the {productname} {productnumber} Proxy extension [systemitem]``Checkbox``.
 . Click [systemitem]``Next`` to continue.
 . Enter your {productname} {productnumber} Proxy extension registration code.
@@ -107,7 +110,7 @@ This finalizes installation of {sle-micro} {microversion} and {productname} {pro
 
 
 
-=== Update the System
+==== Update the System
 
 
 .Procedure: Updating the System
@@ -123,13 +126,13 @@ transactional-update
 
 . Reboot the system.
 . Log in as root.
-. Install the container utilities:
+. Install the container utilities ([package]``mgrpxy`` should already be installed automatically):
 
 +
 
 [source, shell]
 ----
-transactional-update pkg install mgrpxy mgrpxy-bash-completion
+transactional-update pkg install mgrpxy-bash-completion
 ----
 
 +
@@ -140,37 +143,89 @@ Alternatively you may install [systemitem]``mgrpxy-zsh-completion`` or [systemit
 
 . Reboot the system.
 
-== Deploy {productname} Proxy on {sles} {bci-suma}
+[IMPORTANT]
+====
+{sle-micro} is designed to update itself automatically by default and will reboot after applying updates.
+However, this behavior is not desirable for the {productname} environment.
+To prevent automatic updates on your server, {productname} disables the transactional-update timer during the bootstrap process.
+
+If you prefer the {sle-micro} default behavior, enable the timer by running the following command:
+
+[source, shell]
+----
+systemctl enable --now transactional-update.timer
+----
+====
+
+To continue with deployment, see xref:installation-and-upgrade:container-deployment/suma/proxy-deployment-suma.adoc#deploy-suma-proxy-persistent-storage[].
+
+
+
+[[deploy-suma-proxy-sles]]
+=== Install {sles} {bci-suma} and Deploy Proxy
 
 Alternatively, you can install {productname} Proxy on {sles} {bci-suma}.
 The following procedure describes the main steps of the installation process.
 
 .Procedure: Installing {productname} Proxy on {sles} {bci-suma}
 . Locate and download {sles} {bci-suma} [literal]``.iso`` at https://www.suse.com/download/sles/.
+// FIXME Do we need the following step?
++
 . Make sure that the {scc} code you plan to use has the Extensions enabled.
 . Start the installation of {sles} {bci-suma}.
   .. On the [literal]``Language, keyboard and product selection`` select the product to install.
   .. On the [literal]``License agreement`` read the agreement and check [guimenu]``I Agree to the License Terms``.
 . Select the registration method.
+
++
+
+[[NOTE]]
+====
+Please note that for {sles} {bci-suma}, you are required to have a valid {sles} subscription and corresponding regcode, which you must provide on this screen.
+You will be required to enter the {productname} Extension regcode below.
+====
 . In the screen [literal]``Extensions and Modules Selection`` check the following:
-  * {productname} Proxy Extension
++
+
+* {productname} Proxy Extension
   * Basesystem Module
   * Containers Module
++
+
+Enter the {productname} Extension regcode.
 . Complete the installation.
 . When the installation completes, log in to the newly installed server as root.
-. As root, run
+. Update the System (optional, if the system was not set to
+download updates during install):
 
 +
 
 [source,shell]
 ----
+zypper up
+----
+
+. Reboot.
+
+. Log in as root and install [package]``podman`` plus [package]``mgrpxy`` and [package]``mgrpxy-bash-completion`` (if not already automatically installed):
+
++
+[source,shell]
+----
 zypper install podman mgrpxy mgrpxy-bash-completion
 ----
 
+To continue with deployment, see xref:installation-and-upgrade:container-deployment/suma/proxy-deployment-suma.adoc#deploy-suma-proxy-persistent-storage[].
+
+
+
+[[deploy-suma-proxy-persistent-storage]]
 == Configure Custom Persistent Storage
 
-This step is optional.
-However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool.
+Configuring persistent storage is optional, but it is the only way to avoid serious trouble with container full disk conditions.
+If custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool.
+
+* For more information, see [command]``mgr-storage-proxy --help``.
 This tool simplifies creating the container storage and Squid cache volumes.
 
 Use the command in the following manner:
@@ -187,12 +242,6 @@ For example:
 mgr-storage-proxy /dev/nvme1n1
 ----
 
-For more information, type:
-
-[source, shell]
-----
-mgr-storage-proxy --help
-----
 
 
 [NOTE]
@@ -271,4 +320,3 @@ mgrpxy install podman /path/to/config.tar.gz
 ----
 
 This command first resets the configuration of all services to the global defaults and then reloads it.
-
