--- a/modules/client-configuration/pages/client-config-overview.adoc
+++ b/modules/client-configuration/pages/client-config-overview.adoc
@@ -54,6 +54,7 @@ This guide covers both manual and automated client registration and configuratio
 
 **Publication Date:** {docdate}
 
+
 // PDF Copyright Space
 
 {nbsp} +
@@ -66,7 +67,9 @@ This guide covers both manual and automated client registration and configuratio
 {nbsp} +
 {nbsp} +
 {nbsp} +
-
+{nbsp} +
+{nbsp} +
+{nbsp} +
 
 // PDF Copyright
 Copyright © {copyrightdate} SUSE LLC and contributors. All rights reserved.
