updates to clean up navs and pdf outputs

--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -7,6 +7,7 @@ include::./branding/pdf/entities.adoc[]
 :preface-title: Preface
 :toc-title: Contents
 :toclevels: 2
+:sectnumlevels: 2
 :source-highlighter: rouge
 endif::[]
 
