--- a/modules/reference/nav-reference-guide.adoc
+++ b/modules/reference/nav-reference-guide.adoc
@@ -6,7 +6,8 @@ include::./branding/pdf/entities.adoc[]
 :title-page:
 :preface-title: Preface
 :toc-title: Contents
-:toclevels: 5
+:toclevels: 3
+:sectnumlevels: 2
 :source-highlighter: rouge
 endif::[]
 
