fix index link to main doc page

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -66,7 +66,7 @@ Download the complete set of PDFs icon:caret-right[] icon:file-archive[link="../
 [TIP]
 ====
 {productname} documentation is available in several locations and formats.
-For the most up-to-date version of this documentation, see https://documentation.suse.com/multi-linux-manager/.
+For the most up-to-date version of this documentation, see link:https://documentation.suse.com/[SUSE Multi-Linux Manager].
 ====
 
 endif::[]
