Mark the oval data consumption as tech preview

--- a/modules/administration/pages/auditing.adoc
+++ b/modules/administration/pages/auditing.adoc
@@ -57,7 +57,7 @@ These two sources provide us with metadata for conducting CVE audits, each servi
 Channels::
 Channels include the updated software packages, which include patches, and provide insights into the essential patches required to address vulnerabilities.
 
-OVAL::
+OVAL (Tech Preview)::
 In contrast, OVAL data supplies information about the vulnerabilities themselves and the packages that render a system vulnerable to a CVE.
 
 While it is possible to conduct CVE audits using only channels data, synchronizing OVAL data enhances the accuracy of the results, particularly in cases involving zero-day vulnerabilities or partially patched vulnerabilities.
@@ -68,6 +68,54 @@ Having synced OVAL data only, you can already perform CVE audits and check if yo
 
 By default, OVAL data is updated at 23:00 every day.
 We recommend that before you begin a CVE audit you refresh the data to ensure you have the latest vulnerabilities metadata.
+
+[IMPORTANT]
+====
+In addition to retrieving CVE information from channel data, {productname} now includes an experimental feature that fetches CVE details from OVAL files. This functionality is currently in its *first phase* and is considered a *Tech Preview*.
+
+- *Disabled by default*: The feature is turned off by default and must be explicitly enabled by the user.
+- *Reversible*: If any issues arise, users can revert back to the standard channel-based CVE audit.
+- *Performance Considerations*: While initial testing has been conducted, there are still concerns regarding performance, and further optimizations may be needed.
+
+Users are encouraged to experiment with this feature and share feedback. However, it is not yet recommended for production use without thorough testing in a test environment.
+
+
+.Procedure: Enabling and Disabling OVAL Data Support
+
+By default, the OVAL-based CVE audit feature is *disabled*. Users can enable it by updating the `rhn.conf` configuration file and restarting relevant services.
+
+To enable OVAL data support:
+
+
+. Add or modify the following setting in [literal]``rhn.conf``:  
+
++
+----
+java.cve_audit.enable_oval_metadata=true
+----
++
+. Restart the Tomcat and Taskomatic services:
+
+----
+systemctl restart tomcat taskomatic
+----
+
+If you encounter issues and need to revert to the default behavior, disable the feature by setting:
+
+. Add or modify the following setting in [literal]``rhn.conf``:
++
+----
+java.cve_audit.enable_oval_metadata=false
+----
++
+. Restart the Tomcat and Taskomatic services:
+
+----
+systemctl restart tomcat taskomatic
+----
+
+
+====
 
 .Procedure: Updating OVAL Data
 . In the {productname} {webui}, navigate to menu:Admin[Task Schedules] and select the ``oval-data-sync-default`` schedule.
