--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -71,15 +71,13 @@ master: SERVER.EXAMPLE.COM
 
 grains:
   susemanager:
-    activation_key: "<Activation_Key_Name>" <1>
+    activation_key: "<Activation_Key_Name>"
 
 server_id_use_crc: adler32
-enable_legacy_startup_events: False <2> 
-enable_fqdns_grains: False <3>
+enable_legacy_startup_events: False
+enable_fqdns_grains: False
 ----
-<1> Activation key Name
-<2> Legacy events should be set to False
-<3> fqdns Grains should be set to False
+
 
 . Restart the [systemitem]``venv-salt-minion`` service:
 
