--- a/modules/common-workflows/pages/workflow-install-from-selfinstall-on-ppc.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-selfinstall-on-ppc.adoc
@@ -71,7 +71,6 @@ mgr-storage-server $device
 +
 Ensure [literal]``$device`` points to the fast, persistent storage.
 +
-For more information, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#_persistent_volumes[Persistent Volumes].
+For more information, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#deploy-suma-server-persistent-storage[Persistent Volumes].
 
-
-To continue with deployment, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#_deploy_with_mgradm[Server Deployment].
+To continue with deployment, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#deploy-suma-server-mgradm[Server Deployment].
